スペルリーパーの大鎌を1.20.1 Forge向けに補正
PR #918 の非mergeコミット14件を cherry-pick -x した後の移植先補正。
Forge のイベント・NBT・通信、Java 17、GeckoLib 4.8.3 の API に合わせる。
1.20.1 の datagen でレシピ・進捗・タグを再生成し、修理とエンチャント適用を確認する。

Malum 1.6.7 の hurtEvent、Player.attack の大鎌判定、AscensionEnchantment、
SoulDataHandler、属性・装備 API に接続する。投擲は共通仕様を維持する。
Epic Fight は SkillBuildEvent / capability builder / BasicAttack / AssetAccessor に接続する。
Better Combat は attack_range=3.5 のスキーマを使用する。

1.21.1 固有の Malum 色変更2件（018af5ec, eb1cfef5）と専用追加機能
（c36a4fd6）は対象外。後続コミットに含まれる Maelstrom の設定・表示も除外する。
1.20.1 に存在しない Rising Edge の検証は、同版の Hidden Blade 強化の確認へ置き換える。
GameTest の上方整地範囲と、エンチャントを上書きしない ItemStack.enchant の版差を補正する。

検証: Java 17 で runData、build、通常および6連携構成の GameTest を実行。
最終 build は削除予定 API・文字コード検査を含め成功。各構成で必須1293件の成功を確認。
途中の失敗・停止と追加実行の経緯は作業の最終報告へ保持する。
クライアント起動、push、PR作成は依頼に従い実施しない。